@startuml
skinparam classAttributeIconSize 0

class CompetenciaTecnica {
  -String codigo
  -String descBreve
  -String descDetalhada
  +CompetenciaTecnica(String cod, String dsBreve, String dsDet, AreaAtividade at)
  +void addGrauProficiencia(Integer valor, String designacao)
}

class GrauProficiencia {
  -Integer valor
  -String designacao

  +GrauProficiencia(Integer valor, String designacao)
}

class AreaAtividade {
  -String codigo
  -String descBreve
  -String descDetalhada
}

class Plataforma {
  -String designacao
  +RegistoAreasAtividade getRegistoAreasAtividade()
  +RegistoCT getRegistoCT()
}

class RegistoAreasAtividade {
  +List<AreaAtividade> getAreasAtividade()
  +AreaAtividade getAreaAtividadeByCod(String atCod)
}

class RegistoCT {
  +CompetenciaTecnica novaCompetencia(String cod, String dsBreve, String dsDet, String atCod)
  +void registaCompetencia(CompetenciaTecnica ct)
  -void validaCompetencia(CompetenciaTecnica ct)
  -void addCompetencia(CompetenciaTecnica ct)
}


class EspecificarCompetenciaTecnicaController {
  +List<AreaAtividade> getAreasAtividade()
  +void novaCompetencia(String cod, String dsBreve, String dsDet, String atCod)
  +void addGrauProficiencia(Integer valor, String designacao)
  +void registaCompetencia()
}

class EspecificarCompetenciaTecnicaUI {

}

EspecificarCompetenciaTecnicaUI ..> EspecificarCompetenciaTecnicaController
EspecificarCompetenciaTecnicaController ..> Plataforma
EspecificarCompetenciaTecnicaController ..> RegistoAreasAtividade
EspecificarCompetenciaTecnicaController ..> RegistoCT
EspecificarCompetenciaTecnicaController ..> AreaAtividade
EspecificarCompetenciaTecnicaController ..> CompetenciaTecnica
CompetenciaTecnica "*" -> "1" AreaAtividade : referente
CompetenciaTecnica "1" -> "*" GrauProficiencia : aplica

Plataforma "1" --> "1" RegistoAreasAtividade : possui
Plataforma "1" --> "1" RegistoCT : possui

RegistoAreasAtividade "1" --> "*" AreaAtividade : possui
RegistoCT "1" --> "*" CompetenciaTecnica : possui


@enduml
